--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <img id="img"  src="man.jpg"  width="500" height="300" alt="img" class="center" > 
   
 <h1 id="demo" style="text-align:center; font-weight:bold">Mancester Udt Best Memoryes</h1>
-<div id='test' ></div>
+<div id='running-text' ></div>
 </body>
 </html>
